@@ -118,6 +118,9 @@ Set the SMTP authentication user name.
 .B pass=\fIPASSWORD
 Set the SMTP authentication password.
 .TP
+.BI source= HOSTNAME
+Set the source address for connections to the remote host.
+.TP
 .B auth-login
 Force SMTP "AUTH LOGIN" mode instead of auto-detecting.
 .TP
