@@ -28,6 +28,15 @@ do
 	echo "Testing protocol success with $p (stdin, IPv6)"
 	protocol $p -- host=::1 port=$port 3<testmail
 
+	echo "Testing protocol success with $p (source addr)"
+	protocol $p -- host=::1 port=$port source=::1 3<testmail
+
+	echo "Testing protocol failure with $p (bad source addr 1)"
+	error 10 protocol $p -- host=::1 port=$port source=127.0.0.1 3<testmail
+
+	echo "Testing protocol failure with $p (bad source addr 2)"
+	error 10 protocol $p -- host=127.0.0.1 port=$port source=::1 3<testmail
+
 	stop server
 
 	echo "Testing host not found error with $p."
