@@ -15,6 +15,8 @@ Changes in version 1.14
 
 - Added protocol option to set a separate TLS client private key file.
 
+- Added protocol option to bind the source address on connections.
+
 - Fixed nullmailer-inject to report errors to stderr.
 
 - Fixed gnutls cast to pointer from integer of different size warning.
